prevent squished image

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,7 +79,7 @@ button:hover {
     padding: 0rem 2rem;
 }
 .hero-image {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
 }
 @media screen and (max-width:768px) {
